# scipy-test

./: .gitignore  README.md  pyproject.toml
src/scipy_test/: __init__.py  ex01.py  ex02.py  ex03.py
