[project]
name = "scipy-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tateishi Tadatoshi", email = "ishio39@gmail.com" }
]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scipy_test"]

[tool.rye.scripts]
main="python src/scipy_test/main.py"
ex01="python src/scipy_test/ex01.py"
ex02="python src/scipy_test/ex02.py"
ex03="python src/scipy_test/ex03.py"
